fix: neutral dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,7 +18,7 @@
   --color-primary: #00acf0;
   --color-secondary: #347d9b;
   --color-accent: #2197c5;
-  --color-neutral: #111827;
+  --color-neutral: #b2bed7;
   --color-neutral-content: #f3f4f6;
   --color-base-100: #1f2937;
   --color-base-content: #f3f4f6;
